fix(css): icon-link: fix text overflow edge case
Fix for when word is longer than screen width and overflows. The word will now break to next line.

--- a/packages/css/src/icon-link.scss
+++ b/packages/css/src/icon-link.scss
@@ -17,6 +17,7 @@ $link-margin-label-large: $spacing-base-2;
   cursor: pointer;
   position: relative;
   text-decoration: none;
+  word-break: break-word;
 
   @include font-interface($font-size-300);
   color: $color-text-background-light;
